.policies/other/apply-pss-restricted-profile/apply-pss-restricted-profile.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: apply-pss-restricted-profile
  annotations:
    policies.kyverno.io/title: Apply PSS Restricted Profile
    policies.kyverno.io/category: Other, PSP Migration
    kyverno.io/kyverno-version: 1.6.2
    kyverno.io/kubernetes-version: "1.23"
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      Pod Security Standards define the fields and their options which
      are allowable for Pods to achieve certain security best practices. While
      these are typically validation policies, workloads will either be accepted or
      rejected based upon what has already been defined. It is also possible to mutate
      incoming Pods to achieve the desired PSS level rather than reject. This policy
      sets all the fields necessary to pass the PSS Restricted profile.
spec:
  rules:
  - name: add-pss-fields
    match:
      any:
      - resources:
          kinds:
          - Pod
    mutate:
      patchStrategicMerge:
        spec:
          securityContext:
            seccompProfile:
              type: RuntimeDefault
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 3000
            fsGroup: 2000
          containers:
          - (name): "?*"
            securityContext:
              privileged: false
              capabilities:
                drop: 
                - ALL
              allowPrivilegeEscalation: false
